--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://www.caeliusconsulting.com/image/fav-icon.png"
+    />
+    <link rel="stylesheet" href="./src/App.css" />
+    <title>Caelius Consulting Inc : Economical</title>
   </head>
   <body>
     <div id="root"></div>
